Implemented transaction listing by criteria
