# backend/Fms/Dtos/SortDirectionDto.cs
@@ -1,0 +1,11 @@
+﻿using System.Runtime.Serialization;
+
+namespace Fms.Dtos;
+
+public enum SortDirectionDto
+{
+    [EnumMember(Value = "ASC")]
+    Ascending,
+    [EnumMember(Value = "DESC")]
+    Descending
+}
